[project]
name = "chicken-send"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "ultralytics>=8.3.190",
]
